--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,70 @@ img {
   font-size: 20px;
   color: #00000050;
 }
+
+/* Feedback Area Styles */
+.feedback-content {
+  padding: 20px 0px;
+}
+
+.feedback-content h2 {
+  font-size: 42px;
+  margin-bottom: 45px;
+}
+
+.feedback-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.feedback-item {
+  width: 365px;
+  padding: 24px;
+  border-radius: 14px;
+  box-shadow: 0px 0px 7px 0px #f2eded;
+  font-family: "Inter", sans-serif;
+}
+
+.user-ratings {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 4px;
+  margin-bottom: 24px;
+}
+
+.feedback-item h4 {
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.feedback-item p {
+  color: #1e1e1e;
+  margin-bottom: 24px;
+  font-family: "Inter", sans-serif;
+}
+
+.feedback-user {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 12px;
+}
+
+.feedback-user img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.user-details h5 {
+  font-size: 16px;
+  color: #757575;
+}
+
+.user-details span {
+  color: #b3b3b3;
+}
