--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 body {
   color: #252432;
-  background: #fff;
+  background: #f5f8ff;
   font-family: "Raleway", sans-serif;
   line-height: 1.3;
   font-size: 16px;
@@ -188,6 +188,7 @@ img {
 }
 
 .feedback-item {
+  background-color: #ffffff;
   width: 365px;
   padding: 24px;
   border-radius: 14px;
@@ -235,4 +236,30 @@ img {
 
 .user-details span {
   color: #b3b3b3;
+}
+
+/* Focus Area Styles */
+.focus-content {
+  background-color: #ffffff;
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 71px 150px;
+  gap: 20px;
+}
+
+.focus-content h2 {
+  font-size: 50px;
+  color: #000000;
+}
+
+.focus-content p {
+  color: #00000050;
+  font-family: "Inter", sans-serif;
+}
+
+.focus-content img {
+  border-radius: 48px;
 }
