--- a/css/style.css
+++ b/css/style.css
@@ -308,9 +308,50 @@ img {
   color: #00000050;
 }
 
-.form-field input::placeholderm, .form-field textarea::placeholder {
+.form-field textarea {
+  height: 135px;
+}
+
+.form-field input::placeholderm,
+.form-field textarea::placeholder {
   color: #00000050;
 }
 
-
 /* Footer Area Styles */
+#footer {
+  background-color: #fff;
+  height: 428px;
+  box-shadow: 0px 0px 7px 0px #00000010;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-content {
+  width: 531px;
+}
+
+.footer-logo {
+  margin-bottom: 20px;
+}
+
+.footer-logo a {
+  font-weight: 900;
+  font-size: 70px;
+}
+
+.footer-logo p {
+  color: #8987a1;
+  margin-top: 8px;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
+}
+
+.footer-links a {
+  color: #8987a1;
+}
