Footer Font Updated

--- a/css/style.css
+++ b/css/style.css
@@ -325,6 +325,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Inter", sans-serif;
 }
 
 .footer-content {
