--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ img {
 
 /* Focus Area Styles */
 .focus-content {
-  background-color: #ffffff;
+  background-color: #4e47ff10;
   border-radius: 14px;
   display: flex;
   flex-direction: column;
@@ -321,6 +321,23 @@ img {
   color: #00000050;
 }
 
+.contact-form input[type="submit"] {
+  border: none;
+  border-radius: 10px;
+  padding: 15px 12px;
+  cursor: pointer;
+  color: #ffffff;
+  background: #4e47ff;
+  font-size: 16px;
+  font-weight: 800;
+  transition: all 0.3s ease;
+}
+
+.contact-form input[type="submit"]:hover {
+  background: #e8e800d0;
+  color: #252432;
+}
+
 /* Footer Area Styles */
 #footer {
   background-color: #fff;
@@ -359,4 +376,10 @@ img {
 
 .footer-links a {
   color: #8987a1;
+  transition: all 0.3s ease;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+  color: #4e47ff;
 }
